@@ -161,7 +161,7 @@ class UpdateStep(AbstractStep):
         if not self._options.update:
             return
         log("Updating working directory")
-        self._tool.executive.run_and_throw_if_fail(self.port().update_webkit_command())
+        self._tool.executive.run_and_throw_if_fail(self.port().update_webkit_command(), quiet=True)
 
 
 class ApplyPatchStep(AbstractStep):
