@@ -28,9 +28,11 @@
 
 import unittest
 
-from modules.buildsteps import UpdateChangelogsWithReviewerStep
+from modules.buildsteps import UpdateChangelogsWithReviewerStep, UpdateStep
 from modules.mock_bugzillatool import MockBugzillaTool
 from modules.outputcapture import OutputCapture
+from modules.mock import Mock
+
 
 class UpdateChangelogsWithReviewerStepTest(unittest.TestCase):
     def test_guess_reviewer_from_bug(self):
@@ -38,3 +40,15 @@ class UpdateChangelogsWithReviewerStepTest(unittest.TestCase):
         step = UpdateChangelogsWithReviewerStep(MockBugzillaTool(), [])
         expected_stderr = "0 reviewed patches on bug 1, cannot infer reviewer.\n"
         capture.assert_outputs(self, step._guess_reviewer_from_bug, [1], expected_stderr=expected_stderr)
+
+
+class StepsTest(unittest.TestCase):
+    def _run_step(self, step, options, state=None):
+        if not state:
+            state = {}
+        step(MockBugzillaTool(), options).run(state)
+
+    def test_update_step(self):
+        options = Mock()
+        options.update = True
+        self._run_step(UpdateStep, options)
