@@ -1,3 +1,13 @@
+2009-12-16  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        [bzt] Make UpdateStep quiet
+        https://bugs.webkit.org/show_bug.cgi?id=32599
+
+        * Scripts/modules/buildsteps.py:
+        * Scripts/modules/buildsteps_unittest.py:
+
 2009-12-16  Evan Martin  <evan@chromium.org>
 
         Reviewed by Adam Barth.
